[gd_scene load_steps=9 format=2]

[ext_resource path="res://Pictures/Stuff/spotlight_5.png" type="Texture" id=1]
[ext_resource path="res://Game/Skills/Fire Storm.gd" type="Script" id=2]
[ext_resource path="res://Game/Skills/Skill_Properties.gd" type="Script" id=3]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 1
particles_animation = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.238806, 0.432836, 0.686567, 0.992537 )
colors = PoolColorArray( 0.697632, 0, 0.703125, 1, 0.726459, 0.0263922, 0.0263922, 1, 0.0957031, 0, 1, 1, 0.570313, 0, 1, 1, 0.0814781, 0.468609, 0.802246, 1 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=4]
emission_shape = 1
emission_sphere_radius = 16.0
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 80.0
initial_velocity_random = 0.05
angular_velocity = 10.0
angular_velocity_random = 1.0
orbit_velocity = 0.3
orbit_velocity_random = 0.0
linear_accel = 50.0
angle_random = 1.0
scale = 0.5
color_ramp = SubResource( 3 )
hue_variation = -0.71
anim_speed = 1.0

[sub_resource type="CircleShape2D" id=5]
radius = 100.0

[node name="Fire Storm" type="Node2D"]
script = ExtResource( 2 )

[node name="Particles2D" type="Particles2D" parent="."]
material = SubResource( 1 )
position = Vector2( 0.4, -10.4 )
scale = Vector2( 0.8, 0.8 )
amount = 1000
lifetime = 1.8
speed_scale = 1.5
explosiveness = 0.2
process_material = SubResource( 4 )
texture = ExtResource( 1 )
__meta__ = {
"_editor_description_": ""
}

[node name="Skill_Properties" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Skill_Properties"]
shape = SubResource( 5 )
disabled = true
__meta__ = {
"_editor_description_": ""
}

[node name="Timer" type="Timer" parent="Skill_Properties"]

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="ParticlesTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Skill_Properties/Timer" to="Skill_Properties" method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="ParticlesTimer" to="." method="_on_ParticlesTimer_timeout"]
